--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ moondream = [ "einops~=0.8.0", "timm~=1.0.13", "transformers~=4.48.0" ]
 nim = []
 neuphonic = [ "pyneuphonic~=1.5.13", "websockets~=13.1" ]
 noisereduce = [ "noisereduce~=3.0.3" ]
+ojin = []
 openai = [ "websockets~=13.1" ]
 openpipe = [ "openpipe~=4.48.0" ]
 openrouter = []
